# LEGATO

./: .gitignore  .gitmodules  Dockerfile  README.md  index.markdown  requirement.txt  requirements.txt
configs/: gripper.yaml  real.json  sim.json
devices/: base.py  button.py  interface.py  t265.py
devices/dynamixel/: comms_handler.py  dictionary.py  robotis_lib.py  utils.py
docs/: setup.md  usage.md
flexible_ik_solver/: README.md  __init__.py  pyproject.toml
flexible_ik_solver/flex_ik_julia/: setup_flex_ik_julia.py
flexible_ik_solver/flex_ik_julia/FlexIK/: Project.toml
flexible_ik_solver/flex_ik_julia/FlexIK/src/: FlexIK.jl
flexible_ik_solver/flex_ik_julia/FlexIK/test/: runtests.jl
flexible_ik_solver/flex_ik_py/: __init__.py  inverse_solver.py  vel_ik_solver.py
hardwares/: gripper.py  keyboard.py
mimic/: __init__.py  algo.py  config.py  dhb_loss.py  obs_utils.py  policy_nets.py  randomizer.py
models/: base-backup.xml  base.xml
models/objects/: autogen_shelf.xml  cabinet.xml  shelf.xml  utensil_case.xml
scripts/: bc_dataset.py  bc_train.py  bc_visualize.py  real_demo.py  real_demo_tool.py  real_evaluate.py  real_proc.py  sim_demo.py  sim_evaluate.py  sim_proc.py
simulator/: __init__.py  base.py  col_checker.py  controllers.py  ik_solver.py  mp_solver.py  observer.py  recorder.py  render.py  sim_util.py  wrapper.py
simulator/envs/: __init__.py  base.py  demo.py  empty.py  etude.py  google.py  gr1.py  kitchen.py  panda.py  presto.py  spot.py  tool_embodiment.py
utils/: comm.py  demo.py  dhb.py  geom.py  img_video.py  plot.py  sampler.py
(+45 files in other folders)
