# Copyright (c) 2023 Boston Dynamics AI Institute LLC. All rights reserved.

# NOTE this pyproject.toml is currently NOT USED in the standard bdai cli workflow.
# The package will be installed during `bdai install bdai` with its dependencies
# satisfied by the top-level pyproject.toml
# This toml is being kept for posterity in case we switch to a workflow that
# supports individual versioning of modules available in a shared space
# (i.e., outside of $BDAI/projects, since depending on another project is
#  currently not supported by bdai cli workflow.)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexible-ik-solver"
version = "0.2.0"
requires-python = ">=3.6"
readme = "README.md"

dependencies = [
    "numpy>=1.2",
]

[tool.setuptools.packages.find]
where = ["."]
